// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`action button 1`] = `
.pf-c-button.pf-m-action {
  display: inline-block;
  padding: 0.5rem 0.5rem 0.5rem 0.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  background-color: transparent;
  border: 0px;
  border-radius: 30em;
  box-shadow: none;
  color: #292e34;
}

<button
  aria-label=""
  className="pf-c-button pf-m-action"
  disabled={false}
  type="button"
>
  action
   Button
</button>
`;

exports[`danger button 1`] = `
.pf-c-button.pf-m-danger {
  display: inline-block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: #a30000;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 2px #a30000;
  color: #ffffff;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-danger"
  disabled={false}
  type="button"
>
  danger
   Button
</button>
`;

exports[`isBlock 1`] = `
.pf-c-button.pf-m-primary.pf-m-block {
  display: block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: #00659c;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 2px #00659c;
  color: #ffffff;
  width: 100%;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-primary pf-m-block"
  disabled={false}
  type="button"
>
  Block Button
</button>
`;

exports[`isDisabled 1`] = `
.pf-c-button.pf-m-primary.pf-m-disabled {
  display: inline-block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: #00659c;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 1px undefined;
  color: #ffffff;
  pointer-events: none;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-primary pf-m-disabled"
  disabled={true}
  type="button"
>
  Disabled Button
</button>
`;

exports[`isFocus 1`] = `
.pf-c-button.pf-m-primary.pf-m-focus {
  display: inline-block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: #00659c;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 2px #00659c;
  color: #ffffff;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-primary pf-m-focus"
  disabled={false}
  type="button"
>
  Focused Button
</button>
`;

exports[`isHover 1`] = `
.pf-c-button.pf-m-primary.pf-m-hover {
  display: inline-block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: #00659c;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 2px #00659c;
  color: #ffffff;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-primary pf-m-hover"
  disabled={false}
  type="button"
>
  Hovered Button
</button>
`;

exports[`link button 1`] = `
.pf-c-button.pf-m-link {
  display: inline-block;
  padding: 0.25rem 0.25rem 0.25rem 0.25rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: transparent;
  border: 0px;
  border-radius: 30em;
  box-shadow: none;
  color: #00486e;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-link"
  disabled={false}
  type="button"
>
  link
   Button
</button>
`;

exports[`primary button 1`] = `
.pf-c-button.pf-m-primary {
  display: inline-block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: #00659c;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 2px #00659c;
  color: #ffffff;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-primary"
  disabled={false}
  type="button"
>
  primary
   Button
</button>
`;

exports[`secondary button 1`] = `
.pf-c-button.pf-m-secondary {
  display: inline-block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: transparent;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 2px #00659c;
  color: #00659c;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-secondary"
  disabled={false}
  type="button"
>
  secondary
   Button
</button>
`;

exports[`tertiary button 1`] = `
.pf-c-button.pf-m-tertiary {
  display: inline-block;
  padding: 0.25rem 1.5rem 0.25rem 1.5rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 1.5;
  text-align: center;
  white-space: nowrap;
  background-color: transparent;
  border: 0px;
  border-radius: 30em;
  box-shadow: inset 0 0 0 2px #72767b;
  color: #00659c;
}

<button
  aria-label={null}
  className="pf-c-button pf-m-tertiary"
  disabled={false}
  type="button"
>
  tertiary
   Button
</button>
`;
